# WoeUSB

./: .editorconfig  .gitconfig  .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac  setup-development-environment.sh
.github/: pull.yml
assets/: GALLERY.md
debian/: changelog  control  copyright  docs  rules  watch
debian/patches/: 0000-autotools-config-fix.patch  0001-wxFONT-deprecations.patch  series
debian/source/: lintian-overrides
debian/upstream/: metadata
polkit/: com.github.slacka.woeusb.policy
src/: DialogAbout.cpp  MainPanel.cpp  Makefile.am  woeusb
src/linux-menu/: woeusbgui.desktop
src/locale/: Makefile.am  genpot.sh
